<resources>
    <string name="app_name">D2l_MsdProject</string>
    <string name="profile">Profile</string>
    <string name="start_here">Start Here</string>
    <string name="learning_modules">Learning Modules</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="createaccount">CreateAccount</string>
    <string name="sign_in">"   Sign In   "</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username">Username</string>
    <string name="new_password">New Password</string>
    <string name="phone_number">Phone</string>
    <string name="phone">Phone</string>
    <string name="updateInformation">Update Information</string>
    <string name="logout">Logout</string>
    <string name="changeImage">Change Image</string>
    <string name="Lesson">Lesson</string>
    <string name="slides">Slides</string>
    <string name="lab">Lab</string>
    <string name="string_msd">Mobile Software Development Section 02</string>
    <string name="sectionTitle">sectionTitle</string>
    <string name="fileName">fileName</string>


    <string name="lesson1">L1: Course Intro &amp; Kotlin Basics V</string>
    <string name="lesson2">L2: Functions</string>
    <string name="lesson3">L3: Class and Objects</string>
    <string name="lesson4">L4: Build your first Android app v</string>
    <string name="lesson5">L5: Layouts</string>
    <string name="lesson6">L6: App Navigation</string>
    <string name="lesson7">L7: Activity and Fragment Lifecycle</string>
    <string name="lesson8">L8: App Architecture (UI Layer)</string>
    <string name="lesson9">L9: App Architecture (Persistence Layer)</string>
    <string name="lesson10">L10: Advanced RecyclerView use cases</string>
    <string name="lesson11">L11: Connect to the Internet</string>
    <string name="lesson12">L12: Repository pattern and WorkManager</string>
    <string name="lesson13">L13: App UI Design</string>

    <!--    Start Here Section Titles & File Names -->
    <string name="section1">Welcome</string>
    <string name="section2">Syllabus</string>
    <string name="section3">Lab Report Instruction</string>
    <string name="section4">Project Instructions</string>
    <string name="section5">Project Proposal</string>
    <string name="section1Description">Welcome to the class</string>
    <string name="section2Description">CS_4322_2_Sp_23_Syllabus</string>
    <string name="section3Description">Lab Report Instruction</string>
    <string name="section4Description">Project_Instruction</string>
    <string name="section5Description">Project_Proposal</string>

</resources>